--- a/Dissertation/part_evaluation.tex
+++ b/Dissertation/part_evaluation.tex
@@ -1,6 +1,9 @@
 \chapter{Результаты экспериментов}
 \label{chapter_evaluation}
 
+\newcommand{\theory}{CPALockator-Reach}
+\newcommand{\theoryraces}{CPALockator-TM}
+\newcommand{\combatmode}{CPALockator-Inv}
 % Опции:
 % Composite lattice
 
@@ -15,9 +18,8 @@
 Сравнение с ведущими инструментами статической верификации будет проводиться на наборе тестовых задач SV-COMP\footnote{https://sv-comp.sosy-lab.org/2020/}.
 Категория {\em ConcurrencySafety} состоит из 1082 задач, большая часть из которых являются небольшими примерами около 100 строк кода
 Для всех задач требуется доказать достижимость некоторого ошибочного состояния. 
-В основном, используются т.н. выражения \textit{assert} и требуется доказать, что условия в них не нарушаются. 
-Этот набор задач был подготовлен вручную, и содержит редко встречающиеся конструкции работы с многопоточными программами.
-Однако, они содержат в себе нетривиальные механизмы синхронизации, в том числе алгоритмы Деккера, Петерсона и др.
+В основном, используются т.н. выражения \textit{assert}, и требуется доказать, что условия в них не нарушаются. 
+Этот набор задач содержит редко встречающиеся сложные конструкции работы с многопоточными программами, например, нетривиальные механизмы синхронизации, в том числе алгоритмы Деккера, Петерсона и др.
 7 задач были подготовлены на основе драйверов ОС Linux. Все задачи доступны в официальном репозитории SV-COMP\footnote{https://github.com/sosy-lab/sv-benchmarks}.
 
 Сравнение различных конфигураций инструмента будет проводиться на трех множествах задач: набор тестовых задач SV-COMP, набор задач, подготовленных на основе драйверов операционной системы Linux, и задачи, подготовленные на основе ядер закрытых операционных систем реального времени.
@@ -30,6 +32,8 @@
 
 Верификационные задачи на основе ядра операционных систем реального времени были подготовлены для двух закрытых операционных систем.
 Для этого были вручную выделены и закодированы те активности, которые могут выполняться параллельно при реальой работе ОС, в том числе, обработчики прерываний, системные вызовы, системные потоки и т.д.
+Одна задача на основе ядра ОС РВ занимает \todo{строк}, а другая --  \todo{строк}.
+Так как эти задачи содержат большое количество предупреждений, в том числе истинных, и в итоге при любой конфигурации
 
 Эксперименты на наборе задач SV-COMP и наборе драйверов проводились с использованием кластера из 191 машины VerifierCloud\footnote{https://vcloud.sosy-lab.org/cpachecker/webclient/master/info}.
 В нем специально были выбраны машины с одним типом процессора Intel Xeon E3-1230 v5, 3.40 GHz.
@@ -91,7 +95,13 @@
 % \item Игнорирование предупреждений о состоянии гонки с пустым множеством блокировок.
 \end{itemize}
 
-\todo{Описать конфигурации, в том числе CPAchecker, CPAchecker-TM}
+Как уже было сказано, тестовые программы из набора SV-COMP содержат задачу достижимости, а для программ, построенных на основе драйверов и ядер ОС РВ, решается задача поиска состояний гонки.
+Несмотря на то, что основная структура инструмента, в том числе дерево CPA, остается неизменным в обоих случаях, тем не менее, общая конфигурация требует изменений.
+Кроме того, некоторые из оптимизаций накладывают дополнительные ограничения на используемую конфигурацию инструмента.
+В частности, оптимизация BAM, требует использования CPA, инвариантных к окружению.
+Другие опции, наоборот, определяют варианты работы с эффектами окружения, то есть, невозможно использовать единственную начальную конфигурацию инструмента для сравнения всех опций.
+Чтобы отличать различные базовые конфигурации инструмента, далее будем использовать обозначение \textit{\theory} для обозначения конфигурации инструмента для решения задачи достижимости, \textit{\theoryraces} -- для обозначения конфигурации инструмента с эффектами окружения для решения задачи поиска гонок, и \textit{\combatmode} -- для обозначения конфигурации инструмента, инвариантного к эффектам окружения, для решения задачи поиска гонок.
+Таким образом влияние части опций будет оценено на нескольких конфигурациях, а там, где это невозможно, будет указан тот вариант конфигурации инструмента, который поддерживает ту или иную опцию.
 
 %Было реализовано две основные модификации анализа с раздельным рассмотрением потоков с эффектами окружения
 %\begin{enumerate}
@@ -168,6 +178,7 @@
     \caption{Запуск на наборе задач SV-COMP}
     \begin{tabular}{ | l | c | c | c | c | c | c |}
       \hline
+      		& 		\multicolumn{2}{c|}{\theory} & \multicolumn{3}{c|}{Другие инструменты}  \\
       Подход         				& PredicateTM   & ValueTM 	& Threading & Yogar-CBMC 	& Lazy-CSeq  \\ \hline
       Вердикт "ошибка" 				& 1028    		& 241       & 727      	& 773       	& 811       \\ 
   \hspace{0.5cm} из них корректных 	& 805 			& 59 		& 727      	& 773       	& 811       \\ 
@@ -187,7 +198,7 @@
 Результаты подтверждают, что подход с раздельным анализом потоков не пропускает ошибок при некоторых заранее известных ограничениях.
 
 Конфигурация ValueTM является достаточно простым и быстрым анализом, но иногда она вынуждена рассматривать все возможные варианты значений переменных, что приводит к исчерпанию ресурсов по времени.
-В данном эксперименте был использован вариант анализа без уточнения, что привело к значительному повышению количества темтовых примеров, анализ которых был незавершен за отведенные лимиты по времени. 
+В данном эксперименте был использован вариант анализа без уточнения, что привело к значительному повышению количества тестовых примеров, анализ которых был незавершен за отведенный лимит времени. 
 Так как данный анализ является достаточно простым и используется, в основном, на модельных примерах, то реализация полноценного варианта с уточнением не была приоритетной задачей.
 
 Классический анализ Threading является корректным и точным и не выдает ложных вердиктов.
@@ -225,6 +236,7 @@
   	\label{table-sv-comp-merge}
     \begin{tabular}{ | l | c | c | c | }
       \hline
+      		& 		\multicolumn{3}{c|}{\theory}  \\
       Подход         				& MergeJoin & MergeEq 	& MergeSep   \\ \hline
       Вердикт "ошибка" 				& 1028    	& 1028		& 988         \\ 
   \hspace{0.5cm} из них корректных 	& 805 		& 805 		& 763      \\ 
@@ -255,6 +267,7 @@ MergeJoin объединяет все эффекты в один и примен
   	\label{table-drivers-merge}
     \begin{tabular}{ | l | c | c | c | }
       \hline
+      		& 		\multicolumn{3}{c|}{\theoryraces}  \\
       Подход         				& MergeJoin	& MergeEq 	& MergeSep   \\ \hline
       Вердикт "ошибка" 				& 8	    	& 8  		& 5         \\ 
   \hspace{0.5cm} из них корректных 	& 8 		& 8 		& 5      \\ 
@@ -299,14 +312,15 @@ MergeJoin объединяет все эффекты в один и примен
   	\label{table-sv-comp-opt}
     \begin{tabular}{ | l | c | c | c | c | c | c | }
       \hline
+      		& 		\multicolumn{6}{c|}{\theory}  \\
       Подход         				& Base 	& Undef 	& Relevance & ABE 	& Havoc 	&  Imprecise \\ \hline
-      Вердикт "ошибка" 				& 1027  & 1033  	& 1027      & 1026  & 1055     	& 1052       \\ 
+      Вердикт "ошибка" 				& 1027  & 1033  	& 1027      & 1026  & 1052     	& 1052       \\ 
   \hspace{0.5cm} из них корректных 	& 802 	& 805 		& 802     	& 803   & 808    	& 808     	\\ 
   \hspace{0.5cm} из них некорректных & 225 	& 228 		& 225     	& 225  	& 244      	& 244       \\ \hline
       Вердикт "нет ошибки"  		& 21    & 21    	& 21    	& 21   	& 5     	& 2       \\ 
   \hspace{0.5cm} из них корректных 	& 21 	& 21    	& 21     	& 21   	& 5     	& 2       \\
   \hspace{0.5cm} из них некорректных & 0 	& 0    		& 0     	& 0   	& 0     	& 0       \\ \hline
-      Анализ не завершен       		& 34     & 28     	& 34     	& 33   	& 22     	& 28      	\\ \hline
+      Анализ не завершен       		& 34     & 28     	& 34     	& 33   	& 25     	& 28      	\\ \hline
       Время CPU, с   				& 30 900 & 21 600 	& 30 100  	& 26 600 & 13 500   & 15 200     	\\ 
       \hline
     \end{tabular}
@@ -336,6 +350,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-drivers-opt}
     \begin{tabular}{ | l | c | c | c | c | c | c | c |}
       \hline
+      		& 		\multicolumn{6}{c|}{\theoryraces}  \\
       Подход         				& Base 		& Undef		& Relevance & ABE 		& Havoc   	& Imprecise	\\ \hline
       Вердикт "ошибка" 				& 5  		& 5   		& 5       	& 7   		& 18     	& 17		\\ 
   \hspace{0.5cm} из них корректных 	& 5 		& 5 		& 5     	& 7   		& 14     	& 14 		\\ 
@@ -349,8 +364,8 @@ Havoc исключает разделяемые переменные еще на
     \end{tabular}
   \end{table}
 
-Интересное отличие от предыдущего пункта заключается в том, что оптимизация Undef практически ничего не дает.
-Это объясняется тем, что в драйверах ОС Linux очень редко встречается присваивание явных значений во внутренние структуры.
+Интересное отличие от предыдущего пункта заключается в том, что оптимизация Undef не влияет на вердикты.
+Это объясняется тем, что в драйверах ОС Linux редко встречается присваивание явных значений во внутренние структуры.
 В основном, это может быть инициализация, которая обычно происходит в начале работы в однопоточном режиме.
 А все штатные сценарии работы драйвера манипулируют внутренними данными, то есть, вычислить явное их значение при статическом анализе не удается. 
 Это означает, что почти все эффекты окружения и так записывают в разделяемую память неопределенное значение, то есть оптимизация Undef теряет смысл.
@@ -362,85 +377,70 @@ Havoc исключает разделяемые переменные еще на
 Для достаточно длинных ошибочных трасс оптимизация ABE вносит более весомый вклад, так как блоки получаются более длинные за счет большого количества работы с локальными данными, чего не было в искусственных примерах SV-COMP.
 Это позволяет даже получить несколько дополнительных вердиктов.
 
-  \begin{table}[h]\footnotesize \centering
-    \caption{Сравнение оптимизаций на наборе задач \textit{drivers/net/}}
-  	\label{table-drivers-opt-2}
-    \begin{tabular}{ | l | c | c |}
-      \hline
-      Подход         				& Precise	& Imprecise	  	\\ \hline
-      Вердикт "ошибка" 				& 7  		& 21   			\\ 
-  \hspace{0.5cm} из них корректных 	& 7 		& 16 		  	\\ 
-  \hspace{0.5cm} из них некорректных & 0 		& 5 		    \\ \hline
-      Вердикт "нет ошибки"  		& 260    	& 254    	    \\ 
-  \hspace{0.5cm} из них корректных 	& 260 		& 254    	  	\\
-  \hspace{0.5cm} из них некорректных & 0 		& 0    		   	\\ \hline
-      Анализ не завершен       		& 158    	& 150    	   	\\ \hline
-      Время CPU, с   				& 84 100 	& 71 700 	 	\\ 
-      \hline
-    \end{tabular}
-  \end{table}
-
-Оптимизация Imprecise позволяет найти несколько дополнительных ошибок за счет своей скорости, однако приводит к появлению некоторых ложных предупреждений.
+Оптимизации Havoc и Imprecise позволяют найти несколько дополнительных ошибок за счет своей скорости, однако приводит к появлению некоторых ложных предупреждений.
 Тем не менее, стоит заметить, что ее точности хватает, чтобы доказать отсутствие ошибок у большого множества задач. 
 Таким образом, в некоторых случаях имеет смысл жертвовать точностью, отказываясь от точного рассмотрения разделяемых данных для того, чтобы получить новые вердикты.
 
-%CPALockator:
+Сравнение оптимизации ABE на конфигурации \combatmode не проводилось, так как в этом случае бы, по сути, использовалась бы исходная реализация ABE, то есть без каких-либо модификаций, а значит, никакой научной новизны такие результаты не представляют.
 
-  \begin{table}[h]\footnotesize \centering
-    \caption{Сравнение оптимизаций на наборе задач \textit{drivers/net/}}
-  	\label{table-drivers-opt-2}
-    \begin{tabular}{ | l | c | c |}
-      \hline
-      Подход         				& Base		& ABE	  	\\ \hline
-      Вердикт "ошибка" 				& 19  		& 33   			\\ 
-  \hspace{0.5cm} из них корректных 	& 14 		& 25 		  	\\ 
-  \hspace{0.5cm} из них некорректных & 5 		& 8 		    \\ \hline
-      Вердикт "нет ошибки"  		& 254    	& 255    	    \\ 
-  \hspace{0.5cm} из них корректных 	& 254 		& 255    	  	\\
-  \hspace{0.5cm} из них некорректных & 0 		& 0    		   	\\ \hline
-      Анализ не завершен       		& 152    	& 137    	   	\\ \hline
-      Время CPU, с   				& 114 000 	& 93 400 	 	\\ 
-      \hline
-    \end{tabular}
-  \end{table}
-  
-\todo{Вывод}
-
-Результаты сравнения на ядрах ОС РВ представлены в таблицах~\ref{table-os-opt-1},~\ref{table-os-opt-2}.
-
-  \begin{table}[h]\footnotesize \centering
-    \caption{Сравнение оптимизации ABE на ядрах ОС РВ}
-  	\label{table-os-opt-1}
-    \begin{tabular}{ | l | c | c | c | c |}
-      \hline
-      		& 		\multicolumn{2}{c|}{Без уточнения} & \multicolumn{2}{c|}{10 итераций уточнения}  \\
-      Подход         								& Base 	& ABE 	& Base 	& ABE 		\\ \hline
-      Число предупреждений 							& 521  	& 461   & --   	& --  		\\ 
-      Общее время CPU, с							& 586  	& 582   & 10000 & 10000  		\\ 
-\hspace{0.5cm} Время на построение абстракции, с 	& 87 	& 54   	& 87 	& 48   	\\
-\hspace{0.5cm} Время на уточнение, с 				& 0 	& 0   	& 8987 	& 8121   	\\
-      \hline
-    \end{tabular}
-  \end{table}
-  
-\todo{странное отличие на ABE!}
-  
-    \begin{table}[h]\footnotesize \centering
-    \caption{Сравнение оптимизации ABE на ядрах ОС РВ}
-  	\label{table-os-opt-2}
-    \begin{tabular}{ | l | c | c | c | c |}
-      \hline
-      		& 		\multicolumn{2}{c|}{Без уточнения} & \multicolumn{2}{c|}{10 итераций уточнения}  \\
-      Подход         								& Base 	& ABE 	& Base 	& ABE 		\\ \hline
-      Число предупреждений 							& 1037 	& 981   & --   	& 898  		\\ 
-      Общее время CPU, с							& 798  	& 886   & 10000 & 9881  		\\ 
-\hspace{0.5cm} Время на построение абстракции, с 	& 116 	& 71   	& 579 	& 1213   	\\
-\hspace{0.5cm} Время на уточнение, с 				& 0 	& 0   	& 6457 	& 782   	\\
-      \hline
-    \end{tabular}
-  \end{table}
-  
-
+%  \begin{table}[h]\footnotesize \centering
+%    \caption{Сравнение оптимизаций на наборе задач \textit{drivers/net/}}
+%  	\label{table-drivers-opt-2}
+%    \begin{tabular}{ | l | c | c |}
+%      \hline
+%      		& 		\multicolumn{2}{c|}{\combatmode}  \\
+%      Подход         				& Base		& ABE	  	\\ \hline
+%      Вердикт "ошибка" 				& 19  		& 33   			\\ 
+%  \hspace{0.5cm} из них корректных 	& 14 		& 25 		  	\\ 
+%  \hspace{0.5cm} из них некорректных & 5 		& 8 		    \\ \hline
+%      Вердикт "нет ошибки"  		& 254    	& 255    	    \\ 
+%  \hspace{0.5cm} из них корректных 	& 254 		& 255    	  	\\
+%  \hspace{0.5cm} из них некорректных & 0 		& 0    		   	\\ \hline
+%      Анализ не завершен       		& 152    	& 137    	   	\\ \hline
+%      Время CPU, с   				& 114 000 	& 93 400 	 	\\ 
+%      \hline
+%    \end{tabular}
+%  \end{table}
+%
+%Для конфигурации \combatmode также заметно большое влияние оптимизации ABE, которая позволяет получить много новых вердиктов за счет ускорения.
+%
+%Результаты сравнения на ядрах ОС РВ представлены в таблицах~\ref{table-os-opt-1},~\ref{table-os-opt-2}.
+%
+%  \begin{table}[h]\footnotesize \centering
+%    \caption{Сравнение оптимизации ABE на ядрах ОС РВ}
+%  	\label{table-os-opt-1}
+%    \begin{tabular}{ | l | c | c | c | c |}
+%      \hline
+%      		& 		\multicolumn{4}{c|}{\combatmode / ОС РВ 1}  \\
+%      		& 		\multicolumn{2}{c|}{Без уточнения} & \multicolumn{2}{c|}{10 итераций уточнения}  \\
+%      Подход         								& Base 	& ABE 	& Base 	& ABE 		\\ \hline
+%      Число предупреждений 							& 521  	& 461   & --   	& --  		\\ 
+%      Общее время CPU, с							& 586  	& 582   & 10000 & 10000  		\\ 
+%\hspace{0.5cm} Время на построение абстракции, с 	& 87 	& 54   	& 87 	& 48   	\\
+%\hspace{0.5cm} Время на уточнение, с 				& 0 	& 0   	& 8987 	& 8121   	\\
+%      \hline
+%    \end{tabular}
+%  \end{table}
+%  
+%\todo{странное отличие на ABE!}
+%  
+%    \begin{table}[h]\footnotesize \centering
+%    \caption{Сравнение оптимизации ABE на ядрах ОС РВ}
+%  	\label{table-os-opt-2}
+%    \begin{tabular}{ | l | c | c | c | c |}
+%      \hline
+%      		& 		\multicolumn{4}{c|}{\combatmode / ОС РВ 2}  \\
+%      		& 		\multicolumn{2}{c|}{Без уточнения} & \multicolumn{2}{c|}{10 итераций уточнения}  \\
+%      Подход         								& Base 	& ABE 	& Base 	& ABE 		\\ \hline
+%      Число предупреждений 							& 1037 	& 981   & --   	& 898  		\\ 
+%      Общее время CPU, с							& 798  	& 886   & 10000 & 9881  		\\ 
+%\hspace{0.5cm} Время на построение абстракции, с 	& 116 	& 71   	& 579 	& 1213   	\\
+%\hspace{0.5cm} Время на уточнение, с 				& 0 	& 0   	& 6457 	& 782   	\\
+%      \hline
+%    \end{tabular}
+%  \end{table}
+%  
+%В обоих случаях применение оптимизации ABE позволяет снизить количество найденных предупреждений.
 
 \section{Сравнение различных вариантов реализации ThreadCPA}
 
@@ -451,7 +451,7 @@ Havoc исключает разделяемые переменные еще на
 \begin{itemize}
 \item Simple. Простой вариант инвариантный к эффектам окружения.
 \item Env. Вариант с эффектами окружения.
-\item Base. Сложный вариант инвариантный к эффектам окружения.
+\item Base. Расширенный вариант инвариантный к эффектам окружения.
 \end{itemize}
 
 Результаты сравнения представлены в таблице~\ref{table-svcomp-thread}.
@@ -461,6 +461,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-svcomp-thread}
     \begin{tabular}{ | l | c | c | c | }
       \hline
+      		& 		\multicolumn{3}{c|}{\theory}  \\
       Подход         				& Simple   	& Env 		& Base  	\\ \hline
       Вердикт "ошибка" 				& 982    	& 966       & 1028       \\ 
   \hspace{0.5cm} из них корректных 	& 793 		& 785 		& 805    	\\ 
@@ -474,6 +475,9 @@ Havoc исключает разделяемые переменные еще на
     \end{tabular}
   \end{table}
 
+Для конфигураций Simple и Env присутствуют некоторое множество падений инструмента в различных частях инструмента, не связанных напрямую с ThreadCPA.
+Это приводит к тому, что количество выданных вердиктов уменьшается при том что общее количество затраченного времени практически не меняется.
+Тем не менее, можно заключить, что конфигурации Env и Base демонстрируют похожую точность анализа, в то время как Simple не способен доказать отсутствие ошибок для большей части примеров.
 % Много падений в Env из-за counterexample could not be ruled out...
 
 Результаты сравнения на наборе \textit{drivers/net/} представлены в таблице~\ref{table-drivers-thread}.
@@ -483,7 +487,7 @@ Havoc исключает разделяемые переменные еще на
     \caption{Сравнение  на наборе \textit{drivers/net/}}
     \begin{tabular}{ | l | c | c | c | c | c |}
       \hline
-      					& \multicolumn{3}{c|}{CPALockator-TM} 			& \multicolumn{2}{c|}{CPALockator} 	\\
+      					& \multicolumn{3}{c|}{\theoryraces} 			& \multicolumn{2}{c|}{\combatmode} 	\\
       Подход         				& Simple 	& Env 		& Base 		& Simple 	& Base  	\\ \hline
       Вердикт "ошибка" 				& 122    	& 10   		& 11   		& 36        & 36  	 	\\ 
   \hspace{0.5cm} из них корректных 	& 12 		& 10 		& 11   		& 28       	& 28   		\\ 
@@ -500,7 +504,7 @@ Havoc исключает разделяемые переменные еще на
 Реализация Simple не может точно определить, что некоторые эффекты являются несовместным, и из-за этого выдает лишние предупреждения.
 При этом, такая простота реализации никак не помогает при поиске дополнительных ошибок, и время анализа, наоборот, увеличивается, так как много времени тратится на применение большого количества эффектов окружения.
 
-Реализация Env с использованием эффектов окружения потока демонстрирует примерно такие же результаты, как и Base, так как обычно эффектов создания/удаления потока небольшое количество, и их присутствие не должно серьезно усложнить анализ.
+Реализация Env с использованием эффектов окружения потока демонстрирует примерно такие же результаты, как и Base, так как обычно эффектов создания/удаления потока небольшое количество, и их присутствие не усложняет анализ.
 
 Результаты сравнения реализаций ThreadCPA на ОС РВ представлены в таблице~\ref{table-os-thread}.
 
@@ -509,6 +513,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-os-thread}
     \begin{tabular}{ | l | c | c | c | c |}
       \hline
+      		& 		\multicolumn{4}{c|}{\combatmode}  \\
       		& 		\multicolumn{2}{c|}{ОС РВ 1} & \multicolumn{2}{c|}{ОС РВ 2} 	\\
       Подход         					& Simple 	& Base 	& Simple 	& Base 		\\ \hline
       Число предупреждений 				& 461    	& 461   & 981     	& 981  		\\ 
@@ -518,9 +523,12 @@ Havoc исключает разделяемые переменные еще на
     \end{tabular}
   \end{table}
 
-В этом случае играет определенную роль свойства исходного кода.
+В этом случае играет определенную роль свойство исходного кода.
 Дело в том, что для ядра ОС РВ искусственно подготавливатся код, который создает все требуемые потоки, которые при реальном выполнении ОС могут быть запущены после каких-нибудь событий, например, после возникновения прерывания.
 Все выделенные потоки создаются последовательно в одной функции, и в этом случае даже простой анализ потоков способен справиться, так как доступов к разделяемым данным до создания потока нет.
+
+Основной вывод заключается в том, что в данном случае нет определенно бесполезных конфигураций. 
+Env и Base обеспечивают корректные результаты на любых примерах, а конфигурация Simple может использоваться тогда, когда известны дополнительные свойства исходного кода.
 
 
 \subsection{Сравнение различных вариантов обработки повторно создаваемого потока }
@@ -540,6 +548,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-svcomp-thread-create}
     \begin{tabular}{ | l | c | c | c |}
       \hline
+      		& 		\multicolumn{3}{c|}{\theory}  \\
       Подход         				& Fail 	& Skip 	& Self  	\\ \hline
       Вердикт "ошибка" 				& 972   & 986   & 1028       \\ 
   \hspace{0.5cm} из них корректных 	& 793 	& 802 	& 805    	\\ 
@@ -566,7 +575,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-drivers-thread-create}
     \begin{tabular}{ | l | c | c | c | c | c | c |}
       \hline
-      				& 		\multicolumn{3}{c|}{CPALockator-TM} 		& \multicolumn{3}{c|}{CPALockator} \\
+      				& 		\multicolumn{3}{c|}{\theoryraces} 		& \multicolumn{3}{c|}{\combatmode} \\
       Подход         				& Fail 		& Skip 		& Self 		& Fail 	& Skip 		& Self  \\ \hline
       Вердикт "ошибка" 				& 31   		& 32   		& 24   		& 37   	& 36   		& 35   \\ 
   \hspace{0.5cm} из них корректных 	& 23 		& 24 		& 17   		& 29   	& 28   		& 27   \\ 
@@ -592,6 +601,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-os-thread-create}
     \begin{tabular}{ | l | c | c | c | c | c | c |}
       \hline
+      				& 		\multicolumn{3}{c|}{\combatmode} 		& \multicolumn{3}{c|}{\combatmode} \\
       						& 		\multicolumn{3}{c|}{ОС РВ 1} 		& \multicolumn{3}{c|}{ОС РВ 2} \\
       Подход         				& Fail 		& Skip 		& Self 		& Fail 		& Skip 		& Self  \\ \hline
       Число предупреждений			& 461   	& 461  		& 461  		& 981   	& 981   	& 981   \\ 
@@ -623,6 +633,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-svcomp-lock-merge}
     \begin{tabular}{ | l | c | c |}
       \hline
+      		& 		\multicolumn{2}{c|}{\theory}  \\
       Подход         				&  Sep		& Join 		\\ \hline
       Вердикт "ошибка" 				& 1028   	& 1028   	\\ 
   \hspace{0.5cm} из них корректных 	& 805 		& 805 	 	\\ 
@@ -637,8 +648,8 @@ Havoc исключает разделяемые переменные еще на
   \end{table}
 
 Результаты не демонстрируют никакой разницы между подходами.
-Это объясняется тем, что задачи в этом наборе достаточно простые, и в них практически невозможны ситуации, при которых в одну и той же точке программы могут быть захвачены различные блокировки.
-Более того, почти во всех примерах вообще используется единственная блокировка.
+Это объясняется тем, что задачи в этом наборе достаточно простые, и в них практически невозможны ситуации, при которых в одной и той же точке программы могут быть захвачены различные блокировки.
+Более того, почти во всех примерах вообще используется единственная блокировка, в то время как для объединения необходима хотя бы пара отличающихся состояний.
 
 Результаты сравнения на наборе \textit{drivers/net/} представлены в таблице~\ref{table-drivers-lock-merge}.
 
@@ -647,7 +658,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-drivers-lock-merge}
     \begin{tabular}{ | l | c | c | c | c | }
       \hline
-      		& 		\multicolumn{2}{c|}{CPALockator-TM} 	& \multicolumn{2}{c|}{CPALockator}  \\
+      		& 		\multicolumn{2}{c|}{\theoryraces} 	& \multicolumn{2}{c|}{\combatmode}  \\
       Подход         				& Sep 		& Join 		& Sep 		& Join   	\\ \hline
       Вердикт "ошибка" 				& 31   		& 31   		& 37   		& 36   		\\ 
   \hspace{0.5cm} из них корректных 	& 23 		& 23 		& 29   		& 28     	\\ 
@@ -671,6 +682,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-os-lock-merge}
     \begin{tabular}{ | l | c | c | c | c | }
       \hline
+      		& 		\multicolumn{4}{c|}{\theory}  \\
       		& 		\multicolumn{2}{c|}{ОС РВ 1} & \multicolumn{2}{c|}{ОС РВ 2}  \\
       Подход         					& Sep 	& Join 	& Sep 	& Join   	\\ \hline
       Число предупреждений				& 461   & 461   & 981   & 981   	\\ 
@@ -680,6 +692,13 @@ Havoc исключает разделяемые переменные еще на
       \hline
     \end{tabular}
   \end{table}
+
+\todo{счетчик захватов}
+
+Несмотря на некоторые отличия в количестве операций, изменение оператора $merge$ снова никак не влияет на результаты.
+Таким образом, можно сделать вывод о том, что состояния LockCPA являются слишком малочисленными для каждой конкретной точки программы.
+Даже если там возникают несколько состояний, одно из них будет старше по решетке, чем другие, например, не будет содержать блокировок вообще. 
+А значит, операции объединения становятся бессмысленными.
 
 \subsection{Сравнение оптимизаций BAM}
 
@@ -698,6 +717,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-drivers-lock-reduce}
     \begin{tabular}{ | l | c | c | c | c | c |}
       \hline
+      		& 		\multicolumn{5}{c|}{\combatmode}  \\
       Подход         				& None 	& Block 	& All 		& Locks 	& Block-Locks \\ \hline
       Вердикт "ошибка" 				& 35   	& 34       	& 35    	& 32       	& 32     \\ 
   \hspace{0.5cm} из них корректных 	& 27 	& 26 		& 27    	& 25       	& 25   \\ 
@@ -721,6 +741,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-os-lock-reduce-1}
     \begin{tabular}{ | l | c | c | c | c | c | c | }
       \hline
+      		& 		\multicolumn{5}{c|}{\combatmode}  \\
       Подход         						& None 			& Block 	& All		& Locks 	& Block-Locks	\\ \hline
       Число предупреждений 					& 461   		& 461       & 461   	& 461   	& 461       	\\ 
       Общее время CPU, с 					& 963 			& 759 		& 717   	& 616 		& 606 	 		\\ 
@@ -737,6 +758,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-os-lock-reduce-2}
     \begin{tabular}{ | l | c | c | c | c | c | c | }
       \hline
+      		& 		\multicolumn{5}{c|}{\combatmode}  \\
       Подход         						& None 		& Block 	& All 		& Locks 	& Block-Locks 	\\ \hline % & All-Locks	 
       Число предупреждений 					& 981  		& 981      	& 892   	& 981   	& 981  		\\ % & 979  
       Общее время CPU, с 					& 1211 		& 1090 		& 777   	& 909 		& 858 			\\ % & 601  
@@ -749,7 +771,8 @@ Havoc исключает разделяемые переменные еще на
     \end{tabular}
   \end{table}
 
-Для случая ОС РВ видно, что использование эффективного варианта реализации $reduce/expand$ является принципиально важным, и может значительно ускорить анализ.
+Для случая с ОС РВ можно сделать вывод, что использование эффективного варианта реализации $reduce/expand$ является принципиально важным, и может значительно ускорить анализ.
+Это объясняется тем, что, в отличие от драйверов, в ядре операционной системе достаточно много сильно связанного кода, который может вызываться под различными блокировками.
 
 Снижение количества найденных предупреждений для варианта All объясняется наличием сложных случаев захвата блокировки под условиями.
 Например, в начале функции может быть проверка, если данная блокировка еще не захвачена, то она захватывается. 
@@ -770,6 +793,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-drivers-lock-refinement}
     \begin{tabular}{ | l | c | c | }
       \hline 
+      		& 		\multicolumn{2}{c|}{\combatmode}  \\
       Подход         				& Base   	& Refinement \\ \hline
       Вердикт "ошибка" 				& 33    	& 31       \\ 
   \hspace{0.5cm} из них корректных 	& 25 		& 23 		\\ 
@@ -793,6 +817,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-os-lock-refinement}
     \begin{tabular}{ | l | c | c | c | c | }
       \hline
+      		& 		\multicolumn{4}{c|}{\combatmode}  \\
       		& 			 \multicolumn{2}{c|}{ОС РВ 1} & 		\multicolumn{2}{c|}{ОС РВ 2}\\
       Подход         					& Base  & Refinement  	& Base  & Refinement 	\\ \hline
       Выданные предупреждения			& 461   & 488    		& 981   & 1128  		\\ 
@@ -806,6 +831,8 @@ Havoc исключает разделяемые переменные еще на
 
 В случае ОС РВ отличия становятся более масштабными, так как количество примитивов синхронизации резко возрастает и требуется значительное количество итераций, чтобы исключить все ложные предупреждения об ошибках, которые появились именно из-за неточностей LockCPA.
 При этом возможный выигрыш из-за построения менее точной абстракции существенно меньше. 
+
+Таким образом, можно сделать вывод, что реализация LockCPA с использованием уточнения является неэффективной и для небольших программ, и для достаточно объемных.
 
 %На Refinement - таймаут! Поэтому не все unsafe успели уточниться.
 
@@ -826,6 +853,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-drivers-bam}
     \begin{tabular}{ | l | c | c | }
       \hline
+      		& 		\multicolumn{2}{c|}{\combatmode}  \\
       Подход         				& Base  	& BAM 	\\ \hline
       Вердикт "ошибка" 				& 5   		& 37    \\ 
   \hspace{0.5cm} из них корректных 	& 3 		& 29 	\\ 
@@ -841,6 +869,8 @@ Havoc исключает разделяемые переменные еще на
 
 Результаты наглядно демонстрируют, что оптимизация BAM позволет значительно ускорить анализ, при этом новые ложные вердикты связаны не с самой оптимизацией BAM, а с другими свойствами анализа.
 Оптимизация BAM лишь позволяет проявить эти свойства, избежав исчерпания лимита времени или памяти.
+Отдельно отметим, что общее время с использованием оптимизации BAM было затрачено больше из-за большого количества падений конфигурации Base из-за нехватки памяти. 
+Такие падения происходили достаточно быстро, что сокращало общее время работы.
 % Большая часть Out of Memory
 
 Результаты сравнения на ядрах ОС РВ представлены в таблице~\ref{table-os-bam}.
@@ -850,6 +880,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-os-bam}
     \begin{tabular}{ | l | c | c | c | c |  }
       \hline
+      		& 		\multicolumn{4}{c|}{\combatmode}  \\
       		& 			 \multicolumn{2}{c|}{ОС РВ 1} & 	\multicolumn{2}{c|}{ОС РВ 2}\\ \hline
       Подход         					& Base  & BAM  		& Base  & BAM 	\\ \hline
       Выданные предупреждения			& 461   & - 	   	& 981   & -  			\\ 
@@ -887,6 +918,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-drivers-shared}
     \begin{tabular}{ | l | c | c |}
       \hline
+      		& 		\multicolumn{2}{c|}{\combatmode}  \\
       Подход         				& Base 	& Shared 	\\ \hline
       Вердикт "ошибка" 				& 31   	& 33    	\\ 
   \hspace{0.5cm} из них корректных 	& 23 	& 24 		\\ 
@@ -901,6 +933,12 @@ Havoc исключает разделяемые переменные еще на
   \end{table}
 
 %Из-за других уточнений наставилось много предикатов.
+В данном случае использование анализа разделяемых данных не приводит к значительному улучшению.
+Это объясняется тем, что выделение новой памяти и ее инициализация производится обычно на начальном этапе загрузки модуля в однопоточном режиме, и только после этого обработчики драйвера регистрируются в системе и становятся доступными для вызова. 
+Таким образом, анализ потоков успешно справляется с задачей исключения таких ложных ситуаций без анализа разделяемых данных.
+
+Некоторое незначитеьлное ухудшение работы связано с тем, что, тем не менее, некоторые пути к доступам к данным, ранее считавшихся разделяемыми, были отброшены в конфигурации Shared.
+И вместо отброшенных путей стали рассматриваться другие, которые содержали более сложные условия для анализа предикатов, что привело к более длительной процедуре уточнения и построению более детальной абстракции.
 
 Результаты сравнения на ядрах ОС РВ представлены в таблице~\ref{table-os-shared}.
 
@@ -909,6 +947,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-os-shared}
     \begin{tabular}{ | l | c | c | c | c |  }
       \hline
+      		& 		\multicolumn{4}{c|}{\combatmode}  \\
       		& 			 \multicolumn{2}{c|}{ОС РВ 1} & 	\multicolumn{2}{c|}{ОС РВ 2}\\
       Подход         					& Base  & Shared  	& Base  & Shared 	\\ \hline
       Выданные предупреждения			& 461   & 218    	& 981   & 447  			\\ 
@@ -918,10 +957,12 @@ Havoc исключает разделяемые переменные еще на
     \end{tabular}
   \end{table}
 
-% В первом случае много вермени тратится на вычисление покрытия с BAM'ом
-
 В данном случае анализ разделяемых данных значительно сокращает количество ложных предупреждений об ошибках, так как отсутствуют секции инициализации данных.
 Таким образом, только анализ разделяемых данных может определить, что предупреждения является ложным.
+
+Некоторое увеличения времени анализа не связано напрямую с анализом разделяемых данных, а происходит из-за дополнительных расходов на вычисление статистики.
+% Время тратится на вычисления покрытия с BAM внутри restartAlgorithm, в ОС 1 кэш устроен значительно сложнее.
+Это время является незначительным для второго случая из-за отличий кода.
 
 \subsection{Оценка эффекта использования предикатного анализа}
 
@@ -937,6 +978,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-svcomp-without-predicate}
     \begin{tabular}{ | l | c | c |}
       \hline
+      		& 		\multicolumn{2}{c|}{\combatmode}  \\
       Подход         				&  Predicate	& Lightweight 		\\ \hline
       Вердикт "ошибка" 				& 1028   		& 1058   	\\ 
   \hspace{0.5cm} из них корректных 	& 805 			& 808 	 	\\ 
@@ -949,7 +991,9 @@ Havoc исключает разделяемые переменные еще на
       \hline
     \end{tabular}
   \end{table}
-  
+
+Результаты подтверждают тот факт, что без анализа предикатов невозможно доказать недостижимость ошибочной метки, то есть корректность задачи, так как во всех задачах так или иначе присутствует условие.
+Другими словами, все ошибочные метки являются синтаксически достижимыми.
 % Сравнивать на sv-comp глупо, так как там всегда есть зависимости по данным
 
 Результаты сравнения на наборе \textit{drivers/net/} представлены в таблице~\ref{table-drivers-predicate}.
@@ -959,7 +1003,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-drivers-predicate}
     \begin{tabular}{ | l | c | c | c | c |}
       \hline
-      & 			 \multicolumn{2}{c|}{CPALockator-TM} & 	\multicolumn{2}{c|}{CPALockator}\\
+      & 			 \multicolumn{2}{c|}{\theoryraces} & 	\multicolumn{2}{c|}{\combatmode}\\
       Подход         				& Predicate & Lightweight 	& Predicate & Lightweight\\ \hline
       Вердикт "ошибка" 				& 31   		& 144   	& 37   		& 168  	\\ 
   \hspace{0.5cm} из них корректных 	& 23 		& 86 		& 29   		& 86 	\\ 
@@ -973,7 +1017,7 @@ Havoc исключает разделяемые переменные еще на
     \end{tabular}
   \end{table}
 
-Результаты показывают, что использование анализа предикатов существенно повышает точность анализа, хотя для некоторых примеров оказывается возможным доказать корректность без него.
+Результаты показывают, что использование анализа предикатов существенно повышает точность анализа, хотя для некоторых примеров оказывается возможным доказать отсутствие состояний гонки и без него.
 
 Результаты сравнения на ядрах ОС РВ представлены в таблице~\ref{table-os-predicate}.
 
@@ -982,6 +1026,7 @@ Havoc исключает разделяемые переменные еще на
   	\label{table-os-predicate}
     \begin{tabular}{ | l | c | c | c | c |  }
       \hline
+      		& 		\multicolumn{4}{c|}{\combatmode}  \\
       		& 			 \multicolumn{2}{c|}{ОС РВ 1} & 	\multicolumn{2}{c|}{ОС РВ 2}\\
       Подход         					& Predicate  & Lightweight 	& Predicate  & Lightweight 	\\ \hline
       Выданные предупреждения			& 461   	& 521    		& 981   	& 1037  			\\ 
@@ -990,9 +1035,8 @@ Havoc исключает разделяемые переменные еще на
     \end{tabular}
   \end{table}
   
-Заметим, что без анализа предикатов количество предупреждения такое же, как и без ABE.
-
-\todo{Вопросы остаются с lightweight, явно нужно несколько итераций уточнения}
+Заметим, что даже без использования уточнения предикатный анализ способен сократить количество ложных срабатываний за счет оптимизации ABE, которая способна отсекать недостижимые пути в рамках одного блока, в котором строится полная формула пути.
+При этом для дальнейшего отсеивания ложных предупреждений необходмо проведение процедуры уточнения для добавления предикатов.
 
 %----------------------------------------------------
 \section{Поиск известных ошибок в драйверах ОС Linux}
@@ -1010,6 +1054,11 @@ Havoc исключает разделяемые переменные еще на
 
 \subsection{Ложные предупреждения на драйверах ОС Linux}
 
+Анализ ложных предупреждений проводился на драйверах подсистемы \textit{drivers/net/} ОС Linux.
+Стоит отметить, что в данном случае рассматривались ложные предупреждения в целом, а не только из-за инструмента CPALockator.
+Таким образом, количество ложный предупреждений будет выше, чем при анализе различных конфигураций, так как в тех разделах не учитывались неточности, связанные с подготовкой верификационной задачи.
+
+Было проанализировано \todo{x} предупреждений.
 
 % Linux device drivers
 % Benign: 7
